Added Creature and Perk Type

--- a/lang/en.json
+++ b/lang/en.json
@@ -30,12 +30,14 @@
   "TYPES": {
     "Actor": {
       "character": "Character",
-      "npc": "NPC"
+      "npc": "NPC",
+	  "creature": "Creature"
     },
     "Item": {
       "item": "Item",
       "feature": "Feature",
-      "spell": "Spell"
+      "spell": "Spell",
+	  "perk": "Perk"
     }
   }
 }
