--- a/lang/en.json
+++ b/lang/en.json
@@ -85,7 +85,7 @@
         "label": "Fatigue"
       },
       "exhaustion": {
-        "label": "exhaustion"
+        "label": "Exhaustion"
       },
       "rad_lvl": {
         "label": "Rad LVL"
