--- a/lang/en.json
+++ b/lang/en.json
@@ -170,7 +170,7 @@
         "label": "Short Rest"
       },
       "long_rest": {
-        "label": "Unarmed"
+        "label": "Long Rest"
       },
       "perk_list": {
         "label": "Perk List"
